# tgbot_template

./: .flake8  .gitignore  README.md  bot.ini.example  pyproject.toml  requirements.txt
bot/: cli.py  config.py  main.py
bot/filters/: role.py
bot/handlers/: admin.py  user.py
bot/middlewares/: db.py
src/: bot.py  config.py  dispatcher.py  errors.py  main.py
src/db/: client.py
src/filters/: role.py
src/handlers/: admin.py
src/middlewares/: !db.py  !role.py
src/models/: role.py
src/tgbot/: cli.py
src/tgbot/middlewares/: db.py
systemd/: telegrambot.service
