[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = { "" = "bot" }

[project]
name = "TelegramBot"
version = "0.0.1"
authors = [
    { name = "Vozdyx", email = "vozdyx.dev@gmail.com" },
]
description = "Telegram bot example package"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "aiogram~=2.21",
    "redis==4.3.*"
]
[project.optional-dependencies]
test = [
    "pytest"
]
lint = [
    "flake8"
]


[project.urls]
"Homepage" = "https://github.com/Unicorn-Software/TelegramBot"
"Bug Tracker" = "https://github.com/Unicorn-Software/TelegramBot/issues"

[project.scripts]
bot = "cli:cli"